actually fixed overflow scrolling

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 
 body {
   background-color: #e8e9eb;
-  height: 100vh;
+  height: calc(100vh - 124px);
   overflow: hidden;
 }
 
@@ -176,13 +176,15 @@ header {
 }
 
 .make-scroll {
-  overflow: auto;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .bookmarks {
   background-color: #ecdecc;
-  height: 100vh;
+  height: fit-content;
   margin: 0px;
+  min-height: 100%;
   padding: 15px;
   width: 100%;
 }
